unpackaged/main/default/objects/CreditNoteLine__c/CreditNoteLine__c.object-meta.xml
<CustomObject>
    <label>Credit Note Line</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Credit Note Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Notes Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>