unpackaged/main/default/objects/CreditNoteLine__c/fields/AgencyCode__c.field-meta.xml
<CustomField>
    <fullName>AgencyCode__c</fullName>
    <label>Agency Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>