unpackaged/main/default/objects/CreditNoteLine__c/fields/BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnit__c</fullName>
    <label>Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>