unpackaged/main/default/objects/CreditNoteLine__c/fields/CreditNote__c.field-meta.xml
<CustomField>
    <fullName>CreditNote__c</fullName>
    <label>Credit Note</label>
    <referenceTo>CreditNote__c</referenceTo>
    <relationshipLabel>Credit Note Lines</relationshipLabel>
    <relationshipName>CreditNotesLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>