unpackaged/main/default/objects/CreditNoteLine__c/fields/InvoiceLine__c.field-meta.xml
<CustomField>
    <fullName>InvoiceLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Line</label>
    <referenceTo>InvoiceLine__c</referenceTo>
    <relationshipLabel>Credit Notes Lines</relationshipLabel>
    <relationshipName>CreditNotesLines</relationshipName>
    <type>Lookup</type>
</CustomField>