unpackaged/main/default/objects/CreditNoteLine__c/fields/tech_SendToZuora__c.field-meta.xml
<CustomField>
    <fullName>tech_SendToZuora__c</fullName>
    <defaultValue>false</defaultValue>
    <label>tech_SendToZuora</label>
    <type>Checkbox</type>
</CustomField>